<resources>
    <string name="app_name">Flow</string>
    <string name="start_button">시작하기</string>
    <string name="next_button">다음</string>
    <string name="finish_button">완료하기</string>
    <string name="delete_button">삭제하기</string>
    <string name="select_complete_button">선택완료</string>
    <string name="select_button">선택하기</string>
    <string name="register_button">등록하기</string>
    <string name="apply_button">적용하기</string>
    <string name="pass_button">건너뛰기</string>
    <string name="integrate_button">통합하기</string>
    <string name="add_category_button">카테고리 추가하기</string>
    <string name="no_button">아니요</string>
    <string name="title_modal">알림</string>
    <string name="no_notification_button">알림을 받지 않아요</string>
    <string name="delete_modal">정말 삭제하시겠어요?\n선택된 내역은 영구적으로 삭제되어\n복구할 수 없어요.</string>
    <string name="delete_button_modal">네, 삭제할게요</string>
    <string name="select_modal">대표 내역을 선택해주세요.</string>
    <string name="initialize_modal">정말  초기화하시겠어요?\n모든 데이터는 영구적으로 삭제되어\n복구할 수 없어요.</string>
    <string name="initialize_button_modal">네, 초기화할게요</string>
    <string name="userDelete_modal">정말  탈퇴하시겠어요?</string>
    <string name="userDelete_button_modal">네, 탈퇴할게요</string>
    <string name="duplicate_modal">이미 등록된 양식입니다.</string>
    <string name="duplicate_button_modal">확인했습니다!</string>
    <string name="bank_duplicate_modal">내역이 중복 등록되므로\n알림 받을 형식 하나만 선택해주세요</string>
    <string name="home_nav">분석</string>
    <string name="list_nav">내역</string>
    <string name="calendar_nav">캘린더</string>
    <string name="setting_nav">설정</string>
    <string name="go_to_setting">설정으로 이동하기</string>
    <string name="finish_signup_button">지출 흐름 보러가기</string>
    <string name="direct_input_button">직접 입력하기</string>
    <string name="fingerprint_button">지문 인식</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">아이디(이메일)</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인하기</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">분석</string>
    <string name="title_board">내역</string>
    <string name="title_calendar">캘린더</string>
    <string name="title_setting">설정</string>
    <string name="title_activity_home_list">HomeListActivity</string>
    <string name="title_activity_letter_add_registraion">LetterAddRegistraionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_example">Example</string>

    <string name="google_client_id">664437233471-t1o22j6nt0c9lev1ddchsk1u8mi3r3c1.apps.googleusercontent.com</string>

</resources>