<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:gravity="center_horizontal"
            android:text="@string/title_modal"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/modal_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/duplicate_modal"
        android:layout_weight="2"
        android:textColor="#6F6F6F"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="14sp"
        android:paddingVertical="30dp"/>


    <include layout="@layout/item_record"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/modal_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/suit_regular"
        android:text="@string/duplicate_button_modal"
        android:textSize="14sp"
        android:backgroundTint="@color/red"
        android:layout_marginTop="35dp"
        android:paddingVertical="14dp"
         />


</LinearLayout>