<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:gravity="center_horizontal"
            android:text="@string/title_modal"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/modal_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bank_duplicate_modal"
        android:layout_weight="2"
        android:textColor="#6F6F6F"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:background="@drawable/bank_modal_style"
            android:layout_marginEnd="10dp"/>
        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="+82"
            android:background="@drawable/bank_modal_style"

            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"


        >

        <Button
            android:id="@+id/modal_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_button_modal"
            android:textColor="#6F6F6F"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:textSize="14sp"
            android:backgroundTint="@color/lightgray3"
            android:layout_marginEnd="5dp"
            android:paddingVertical="14dp"
            />

        <Button
            android:id="@+id/modal_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_button"
            android:fontFamily="@font/spoqahansansneo_regular"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>

</LinearLayout>