<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/username"
        android:text="제대로 기록하는 나의 지출 흐름"
        android:textColor="@color/black"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="18dp"/>
    <EditText
        android:id="@+id/username"
        android:layout_marginTop="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="14dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textSize="14dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintBottom_toTopOf="@id/login_button"/>

    <TextView
        android:id="@+id/login_find_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="아이디(이메일) 찾기"
        android:textColor="#4F4F4F"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toStartOf="@id/bar"
        android:clickable="true"/>
    <View
        android:id="@+id/bar"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="#E9E9E9"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>
    <TextView
        android:id="@+id/login_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비밀번호 찾기"
        android:textColor="#4F4F4F"
        android:textSize="12dp"
        android:clickable="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toEndOf="@id/bar"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/login_button_style"
        android:enabled="false"
        android:fontFamily="@font/spoqahansansneo_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/SNS_login_description"/>
    <TextView
        android:id="@+id/SNS_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textColor="#4F4F4F"
        android:layout_marginTop="50dp"
        android:text="SNS 계정으로 로그인하기"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintBottom_toTopOf="@id/kakao_login"/>
    <ImageButton
        android:id="@+id/kakao_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_kakao_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toStartOf="@id/naver_login"
        app:layout_constraintTop_toBottomOf="@id/SNS_login_description"
        app:layout_constraintBottom_toTopOf="@id/signup_description"/>
    <ImageButton
        android:id="@+id/naver_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_naver_login"
        app:layout_constraintStart_toEndOf="@id/kakao_login"
        app:layout_constraintEnd_toStartOf="@id/google_login"
        app:layout_constraintTop_toBottomOf="@id/SNS_login_description"
        app:layout_constraintBottom_toTopOf="@id/signup_description"/>
    <ImageButton
        android:id="@+id/google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/naver_login"
        app:layout_constraintTop_toBottomOf="@id/SNS_login_description"
        app:layout_constraintBottom_toTopOf="@id/signup_description"/>
    <TextView
        android:id="@+id/signup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textColor="@color/black"
        android:text="아직 회원이 아니신가요?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:textColor="@color/red"
        android:text="이메일로 가입하기"
        app:layout_constraintStart_toEndOf="@id/signup_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>